read all now works!

--- a/UserInterfaceLayer/UserInterfaceLayer.csproj
+++ b/UserInterfaceLayer/UserInterfaceLayer.csproj
@@ -79,5 +79,19 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{9e6d432f-f49f-4960-ab74-ac354ccccbd1}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{b067a3cd-99a4-4f9e-9261-380ac4070eb1}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{22eaa7f0-877f-4da9-96c2-d04dbb28ebd8}</Project>
+      <Name>Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
