--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerDAL.cs" />
     <Compile Include="ProductNumberNotFound.cs" />
     <Compile Include="ProductDAL.cs" />
     <Compile Include="DALTest.cs" />
