Customer form update

--- a/UserInterface2.0/UserInterface2.0.csproj
+++ b/UserInterface2.0/UserInterface2.0.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{9e6d432f-f49f-4960-ab74-ac354ccccbd1}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
