--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Manager.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="EntitiesMain.cs" />
