--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
+    <Compile Include="OrderBLL.cs" />
     <Compile Include="ProductBLL.cs" />
     <Compile Include="BLLTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
