Working on List-and some ideas

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -61,5 +61,8 @@
       <Name>Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ListOfOrders.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
