UI bugs; ReadAll bug; made CreditCard into a string

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreditCardNumOutOfRange.cs" />
     <Compile Include="CustomerDAL.cs" />
     <Compile Include="MonthOutOfRange.cs" />
     <Compile Include="OrderDAL.cs" />
