Worked on CustomerList.txt

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -63,6 +63,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CustomerList.txt" />
     <Content Include="ListOfOrders.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
