switching forms works

--- a/UserInterface2.0/UserInterface2._0.csproj
+++ b/UserInterface2.0/UserInterface2._0.csproj
@@ -79,6 +79,7 @@
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProvider.cs" />
     <Compile Include="orderForm.cs">
       <SubType>Form</SubType>
     </Compile>
