--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CreditCardNumOutOfRange.cs" />
     <Compile Include="CustomerDAL.cs" />
+    <Compile Include="ExceptionOrderNumInvalid.cs" />
     <Compile Include="MonthOutOfRange.cs" />
     <Compile Include="OrderDAL.cs" />
     <Compile Include="ProductNumberNotFound.cs" />
