--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
     <Compile Include="ExceptionCustomerHasNoOrders.cs" />
+    <Compile Include="ExceptionNotEnoughInStock.cs" />
     <Compile Include="ExceptionProductHasNoOrders.cs" />
     <Compile Include="OrderBLL.cs" />
     <Compile Include="ProductBLL.cs" />
