added employee with password thing

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
+    <Compile Include="EmployeeBLL.cs" />
     <Compile Include="ExceptionCustomerHasNoOrders.cs" />
     <Compile Include="ExceptionProductHasNoOrders.cs" />
     <Compile Include="OrderBLL.cs" />
